// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineClamp renders 0 1`] = `
Array [
  .c0 {
  line-clamp: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`lineClamp renders function 1`] = `
Array [
  .c0 {
  line-clamp: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: has;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: has;
}

<div
    className="c0"
  />,
]
`;

exports[`lineClamp renders invalid theme path 1`] = `
Array [
  .c0 {
  line-clamp: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`lineClamp renders negative number 1`] = `
Array [
  .c0 {
  line-clamp: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineClamp renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    line-clamp: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-clamp: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    line-clamp: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-clamp: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-clamp: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-clamp: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-clamp: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineClamp renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    line-clamp: July;
  }
}

@media April {
  .c0 {
    line-clamp: August;
  }
}

@media January {
  .c0 {
    line-clamp: September;
  }
}

@media April {
  .c0 {
    line-clamp: November;
  }
}

@media June {
  .c0 {
    line-clamp: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    line-clamp: July;
  }
}

@media April {
  .c0 {
    line-clamp: August;
  }
}

@media January {
  .c0 {
    line-clamp: September;
  }
}

@media April {
  .c0 {
    line-clamp: November;
  }
}

@media June {
  .c0 {
    line-clamp: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-clamp: January;
  }
}

@media April {
  .c0 {
    line-clamp: December;
  }
}

@media January {
  .c0 {
    line-clamp: April;
  }
}

@media April {
  .c0 {
    line-clamp: May;
  }
}

@media June {
  .c0 {
    line-clamp: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-clamp: January;
  }
}

@media April {
  .c0 {
    line-clamp: December;
  }
}

@media January {
  .c0 {
    line-clamp: April;
  }
}

@media April {
  .c0 {
    line-clamp: May;
  }
}

@media June {
  .c0 {
    line-clamp: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineClamp renders postitive number 1`] = `
Array [
  .c0 {
  line-clamp: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineClamp renders string 1`] = `
Array [
  .c0 {
  line-clamp: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: June;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: June;
}

<div
    className="c0"
  />,
]
`;

exports[`lineClamp renders valid theme path 1`] = `
Array [
  .c0 {
  line-clamp: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-clamp: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
